sil/mock_hal/sil_hal.h

/* ------------------------------------------------------------------ */
/* Common                                                              */
/* ------------------------------------------------------------------ */

typedef enum {
    HAL_OK      = 0x00,
    HAL_ERROR   = 0x01,
    HAL_BUSY    = 0x02,
    HAL_TIMEOUT = 0x03
} HAL_StatusTypeDef;
/* values copied from stm32g4xx_hal_gpio.h */
#define GPIO_PIN_4                   ((uint16_t)0x0010)
/* Defined in the firmware's own gpio.c (compiled into the SIL DLL). */
void HAL_GPIO_EXTI_Callback(uint16_t GPIO_Pin);
/* ------------------------------------------------------------------ */
/* SIL callback registration (called from Python via ctypes)           */
/* ------------------------------------------------------------------ */

/* is_write: 1 = write, 0 = read. Return value is a HAL_StatusTypeDef. */
typedef int32_t (*sil_i2c_cb_t)(uint16_t dev_address, uint16_t mem_address,
                                uint16_t mem_add_size, uint8_t *buf,
                                uint16_t len, int32_t is_write);
/* address-only readiness probe; return value is a HAL_StatusTypeDef */
typedef int32_t (*sil_i2c_ready_cb_t)(uint16_t dev_address, uint32_t trials,
                                      uint32_t timeout_ms);
typedef void    (*sil_delay_cb_t)(uint32_t ms);
typedef void    (*sil_gpio_init_cb_t)(uint32_t port_id, uint32_t pin,
                                      uint32_t mode, uint32_t pull);
typedef int32_t (*sil_fdcan_add_cb_t)(uint32_t identifier, uint32_t id_type,
                                      uint32_t dlc_code, uint8_t *data);
typedef int32_t (*sil_fdcan_filter_cb_t)(uint32_t id_type, uint32_t filter_index,
                                         uint32_t filter_type, uint32_t filter_config,
                                         uint32_t filter_id1, uint32_t filter_id2);
/* op: 1 = ConfigGlobalFilter, 2 = Start, 3 = ActivateNotification */
typedef int32_t (*sil_fdcan_op_cb_t)(int32_t op);
typedef void    (*sil_fdcan_protocol_cb_t)(uint32_t *last_error_code,
                                           uint32_t *bus_off,
                                           uint32_t *error_passive);
typedef void    (*sil_fdcan_counters_cb_t)(uint32_t *tx_error_cnt);
void sil_set_i2c_cb(sil_i2c_cb_t cb);
void sil_set_i2c_ready_cb(sil_i2c_ready_cb_t cb);
void sil_set_delay_cb(sil_delay_cb_t cb);
void sil_set_gpio_init_cb(sil_gpio_init_cb_t cb);
void sil_set_fdcan_add_cb(sil_fdcan_add_cb_t cb);
void sil_set_fdcan_filter_cb(sil_fdcan_filter_cb_t cb);
void sil_set_fdcan_op_cb(sil_fdcan_op_cb_t cb);
void sil_set_fdcan_protocol_cb(sil_fdcan_protocol_cb_t cb);
void sil_set_fdcan_counters_cb(sil_fdcan_counters_cb_t cb);
/* Python-side CAN model pushes register state here after each bus event. */
void sil_fdcan_set_regs(uint32_t txbrp, uint32_t txbto);